--- a/KiryanCollege/MainWindow.xaml
+++ b/KiryanCollege/MainWindow.xaml
@@ -11,7 +11,7 @@
             <ColumnDefinition Width="440"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Border BorderBrush="Black" BorderThickness="1">
+        <Border BorderBrush="Red" BorderThickness="1">
         <Grid Grid.Column="0">
             <Grid.RowDefinitions>
                 <RowDefinition/>
