--- a/KiryanCollege/Page/JournalPage.xaml
+++ b/KiryanCollege/Page/JournalPage.xaml
@@ -1,14 +1,52 @@
-﻿<Page x:Class="KiryanCollege.Page.JournalPage"
+﻿<Page x:Class="SulejmanovaCollege1.Pages.Report1Pages"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:KiryanCollege.Page"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="JournalPage">
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="clr-namespace:SulejmanovaCollege1.Pages"
+      mc:Ignorable="d"
+      d:DesignHeight="450" d:DesignWidth="600"
+      Title="Окно отчёта1" Background="White">
 
-    <Grid>
-        
-    </Grid>
+	<Grid Margin="10">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition/>
+			<ColumnDefinition Width="45"/>
+			<ColumnDefinition/>
+
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition />
+			<RowDefinition Height="60" />
+			<RowDefinition Height="40"/>
+			<RowDefinition />
+			<RowDefinition Height="80" />
+			<RowDefinition Height="80" />
+			<RowDefinition />
+			<RowDefinition Height="50"/>
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<TextBlock Text="Выберите начало периода:" HorizontalAlignment="Center" FontSize="16"
+                   VerticalAlignment="Center"/>
+		<TextBlock Text="Выберите периода периода:" Grid.Column="2" HorizontalAlignment="Center" FontSize="16"
+                   VerticalAlignment="Center"/>
+		<DatePicker Grid.Row="1" Margin="5" Width="200"/>
+		<DatePicker Grid.Row="1" Grid.Column="2" Width="200" Margin="5"/>
+		<TextBlock Text="Выберите группу:" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center"
+                   FontSize="16" VerticalAlignment="Center"/>
+		<ComboBox Name="GroupCmb" Grid.Row="2" Grid.Column="2" Margin="35 5 35 5"/>
+		<Grid Grid.Row="4" Grid.RowSpan="2" Grid.ColumnSpan="3">
+			<DataGrid Margin="30 0 30 0">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Дата" />
+					<DataGridTextColumn Header="Группа" Width="50"/>
+					<DataGridTextColumn Header="Специальность" Width="100"/>
+					<DataGridTextColumn Header="Активность" Width="75"/>
+					<DataGridTextColumn Header="Направление" Width="80"/>
+					<DataGridTextColumn Header="Балл" Width="40"/>
+				</DataGrid.Columns>
+			</DataGrid>
+		</Grid>
+		<Button Content="Выбрать" Grid.Row="7" Margin="10" Width="150"/>
+	</Grid>
 </Page>
